Small details are changed